add codes in jupyter notebook and change some of the codes in R file

--- a/DATA201_Assignment2_R.ipynb
+++ b/DATA201_Assignment2_R.ipynb
@@ -170,16 +170,18 @@
     }
    ],
    "source": [
-    "metascore_page <- url %>% \n",
-    "    read_html()\n",
-    "metascore_page"
+    "games_page <- url %>% \n",
+    "  read_html()\n",
+    "games_page"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "id": "9d23d5fe",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3936,31 +3938,62 @@
     }
    ],
    "source": [
-    "metascore_page %>% \n",
-    "    html_structure()"
+    "games_page %>% \n",
+    "  html_structure()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "c1f8375f",
+   "execution_count": null,
+   "id": "74dc098f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{xml_nodeset (1)}\n",
-       "[1] <table class=\"css-jgru8w e1oulx2j7\">\\n<caption>Champion Statistics<!-- -- ..."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "champion_page %>% \n",
-    "    html_nodes(\"table\") "
+    "# Helper function\n",
+    "get_data <- function(data, element_class) {\n",
+    "  text_data <- data %>% \n",
+    "    html_nodes(element_class) %>% \n",
+    "    html_text2()\n",
+    "  \n",
+    "  return(text_data)\n",
+    "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9f267e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Gaming Platforms\n",
+    "platforms <- tibble(Gaming_Platforms = get_data(games_page, \".platforms.current_platforms > li\"))\n",
+    "platforms %>% \n",
+    "  mutate(Ref = games_page %>% html_nodes(\".platforms.current_platforms > li > div > span > a\") %>% html_attr(\"href\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56a34644",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# New Game Releases\n",
+    "new_games <- tibble(Title = get_data(games_page, \"th.product_title\"),\n",
+    "                    Platform = get_data(games_page, \".product_platform\"),\n",
+    "                    Score = get_data(games_page, \".metascore_anchor > div\"),\n",
+    "                    Critics = get_data(games_page, \".critic_count > a > span\"))\n",
+    "new_games "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f2c24e2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -3975,7 +4008,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.1.2"
+   "version": "4.2.1"
   }
  },
  "nbformat": 4,
