add codes in .ipynb

--- a/DATA201_Assignment2.ipynb
+++ b/DATA201_Assignment2.ipynb
@@ -53,7 +53,7 @@
    },
    "outputs": [],
    "source": [
-    "# your answer here"
+    "# your answer hereone of this pages (the rest is for later)"
    ]
   },
   {
@@ -98,7 +98,7 @@
    },
    "outputs": [],
    "source": [
-    "# your answer here"
+    "Select one of this pages# your answer here"
    ]
   },
   {
