suppressed the warnings

--- a/DATA201_Assignment2_R.ipynb
+++ b/DATA201_Assignment2_R.ipynb
@@ -1122,7 +1122,8 @@
     "    \n",
     "  stopifnot(ms != \"tbd\" | us != \"tbd\")\n",
     "    \n",
-    "  return(tibble(ms = map_dbl(ms, as.double), us = map_dbl(us, as.double)))\n",
+    "  return(tibble(ms = suppressWarnings(map_dbl(ms, as.double)), \n",
+    "                us = suppressWarnings(map_dbl(us, as.double))))\n",
     "}\n",
     "\n",
     "get_scores_safe <- purrr::possibly(.f = get_scores, otherwise = NA_integer_)"
@@ -1159,26 +1160,6 @@
    "id": "0bf2fcd4",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1276,10 +1257,7 @@
     "         platform_name = map_chr(platform_name, clean_text))\n",
     "\n",
     "games_this_year %>% \n",
-    "    head() \n",
-    "\n",
-    "# Warning message in .Primitive(\"as.double\")(x, ...):\n",
-    "# “NAs introduced by coercion”"
+    "    head() "
    ]
   },
   {
@@ -1298,52 +1276,6 @@
     "scrolled": true
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "“NAs introduced by coercion”\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
