--- a/DATA201_Assignment2_R.ipynb
+++ b/DATA201_Assignment2_R.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df753bac",
+   "id": "2e39a857",
    "metadata": {},
    "source": [
     "Make an introduction to the metacritic and ask to scrape their website."
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc68caef",
+   "id": "9062d14d",
    "metadata": {},
    "source": [
     "We take a web page from metacritic and use `read_html()` to read its content. We then save it as **games** to be able to use it throughout the tasks."
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4882068b",
+   "id": "f6cd2a92",
    "metadata": {},
    "source": [
     "Extracts the game titles from `h3` elements which under the elements with `title` and `clamp-summary-wrap` classes. Save the vector of characters as **titles**. "
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc6e73e7",
+   "id": "2497e610",
    "metadata": {},
    "source": [
     "Extracts the links of game titles from `a` elements with `title` class. Save the vector of characters as **link**. "
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "485e92cb",
+   "id": "da22fdde",
    "metadata": {},
    "source": [
     "Extracts the gaming platforms from elements with `data` class under the parent elements with `platform` class. Save the vector of characters as **game_platform**. "
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b39d8251",
+   "id": "84c54493",
    "metadata": {},
    "source": [
     "Extracts the release dates from `span` elements class under the parent elements with `clamp-details` class. Save the vector of characters as **release_date**. "
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac2743c5",
+   "id": "a73186ce",
    "metadata": {},
    "source": [
     "Extracts the game descriptions from elements with `summary` class. Save the vector of characters as **description**. "
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9548239",
+   "id": "3fba5f08",
    "metadata": {},
    "source": [
     "Extracts the meta scores from `div` elements which under the `a` elements and elements with `clamp-metascore` class. Converted the values as double and save the vector of doubles as **meta_score**. "
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e35cd0d1",
+   "id": "7428f968",
    "metadata": {},
    "source": [
     "Extracts the user scores from `div` elements which under the `a` elements and elements with `clamp-userscore` class. Converted the values as double and then save the vector of doubles as **user_score**. "
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 93,
    "id": "524dd299",
    "metadata": {},
    "outputs": [],
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 94,
    "id": "8c7794db",
    "metadata": {},
    "outputs": [],
@@ -1078,12 +1078,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "de1ae785",
+   "cell_type": "markdown",
+   "id": "da4aee40",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Created a data frame containing the links to other web pages and then we replaced the links with their web page content. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1095,28 +1095,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 95,
    "id": "0bf2fcd4",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "\"NAs introduced by coercion\"\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "\"NAs introduced by coercion\"\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "\"NAs introduced by coercion\"\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "\"NAs introduced by coercion\"\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "\"NAs introduced by coercion\"\n",
-      "Warning message in .Primitive(\"as.double\")(x, ...):\n",
-      "\"NAs introduced by coercion\"\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1501,7 +1483,7 @@
    "execution_count": 28,
    "id": "0179497d",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1586,6 +1568,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "24773be5",
+   "metadata": {},
+   "source": [
+    "We scraped the content of the two web pages by using the getter functions and applying the **cleaning** functions to some data collected that contains special characters and whitespaces."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cca9d307",
    "metadata": {},
    "source": [
@@ -1632,7 +1622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1fdc1e2",
+   "id": "85462e04",
    "metadata": {},
    "source": [
     "We created a pie chart to see which gaming platform released games and the quantity from last month until the current date."
@@ -1680,7 +1670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55d86a21",
+   "id": "7e2aa702",
    "metadata": {},
    "source": [
     "We created a bar plot that compares the critics' and users' scores of the top 5 games in the last 90 days."
@@ -1740,7 +1730,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb168fc1",
+   "id": "b6c63ade",
    "metadata": {},
    "source": [
     "Combines the base URL with the endpoint to create a full link leading to the resource."
@@ -1778,7 +1768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb87d7ba",
+   "id": "a9b2f471",
    "metadata": {},
    "source": [
     "Get the entries of public APIs under the **/entries** endpoint. The result is a response containing the data in JSON format in the body. The header includes the following:\n",
@@ -1825,7 +1815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9605060d",
+   "id": "b3cecba7",
    "metadata": {},
    "source": [
     "Extract the content of the request body in a text type or, in this case, in JSON type. "
@@ -9217,7 +9207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaed2b5e",
+   "id": "3abc5129",
    "metadata": {},
    "source": [
     "We converted the content of the request body, which is in **JSON** format, to an R object to easily access the data inside of it. "
@@ -9767,7 +9757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68ded12e",
+   "id": "da284f31",
    "metadata": {},
    "source": [
     "We created a data frame about the entries of government public APIs from **ap_data** by extracting the **entries** data frame inside the list and then filtering the category."
@@ -9776,7 +9766,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "dd95ff99",
+   "id": "a05a37f9",
    "metadata": {},
    "outputs": [
     {
@@ -9812,7 +9802,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d20bcb2",
+   "id": "a1167c27",
    "metadata": {},
    "source": [
     "We created a pie chart to inform which entries in the list of government public APIs require an additional step, which is authentication, to access the resource under the endpoint.  "
