added the final comments

--- a/DATA201_Assignment2_R.ipynb
+++ b/DATA201_Assignment2_R.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e39a857",
+   "id": "60dcc6cb",
    "metadata": {},
    "source": [
     "Make an introduction to the metacritic and ask to scrape their website."
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9062d14d",
+   "id": "f9461742",
    "metadata": {},
    "source": [
     "We take a web page from metacritic and use `read_html()` to read its content. We then save it as **games** to be able to use it throughout the tasks."
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6cd2a92",
+   "id": "b69d50f1",
    "metadata": {},
    "source": [
     "Extracts the game titles from `h3` elements which under the elements with `title` and `clamp-summary-wrap` classes. Save the vector of characters as **titles**. "
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2497e610",
+   "id": "d30b9eef",
    "metadata": {},
    "source": [
     "Extracts the links of game titles from `a` elements with `title` class. Save the vector of characters as **link**. "
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da22fdde",
+   "id": "ca6cb650",
    "metadata": {},
    "source": [
     "Extracts the gaming platforms from elements with `data` class under the parent elements with `platform` class. Save the vector of characters as **game_platform**. "
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84c54493",
+   "id": "7df826be",
    "metadata": {},
    "source": [
     "Extracts the release dates from `span` elements class under the parent elements with `clamp-details` class. Save the vector of characters as **release_date**. "
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a73186ce",
+   "id": "bfcf0107",
    "metadata": {},
    "source": [
     "Extracts the game descriptions from elements with `summary` class. Save the vector of characters as **description**. "
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fba5f08",
+   "id": "5d5e68ca",
    "metadata": {},
    "source": [
     "Extracts the meta scores from `div` elements which under the `a` elements and elements with `clamp-metascore` class. Converted the values as double and save the vector of doubles as **meta_score**. "
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7428f968",
+   "id": "cffffc48",
    "metadata": {},
    "source": [
     "Extracts the user scores from `div` elements which under the `a` elements and elements with `clamp-userscore` class. Converted the values as double and then save the vector of doubles as **user_score**. "
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da4aee40",
+   "id": "274efcb3",
    "metadata": {},
    "source": [
     "Created a data frame containing the links to other web pages and then we replaced the links with their web page content. "
@@ -1568,10 +1568,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24773be5",
+   "id": "e0a01445",
    "metadata": {},
    "source": [
     "We scraped the content of the two web pages by using the getter functions and applying the **cleaning** functions to some data collected that contains special characters and whitespaces."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef53308a",
+   "metadata": {},
+   "source": [
+    "We created relational dataset which is similar to task (b). The **new_video_games** data frame relates to **platforms** data frame through `game_platform`. The **scores** data frame relates to **new_video_games** and **platforms** data frame via `game_title` and `game_platform`."
    ]
   },
   {
@@ -1622,7 +1630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85462e04",
+   "id": "f7238451",
    "metadata": {},
    "source": [
     "We created a pie chart to see which gaming platform released games and the quantity from last month until the current date."
@@ -1670,7 +1678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e2aa702",
+   "id": "028a86fc",
    "metadata": {},
    "source": [
     "We created a bar plot that compares the critics' and users' scores of the top 5 games in the last 90 days."
@@ -1730,7 +1738,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6c63ade",
+   "id": "83e7beab",
    "metadata": {},
    "source": [
     "Combines the base URL with the endpoint to create a full link leading to the resource."
@@ -1768,7 +1776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9b2f471",
+   "id": "24217b32",
    "metadata": {},
    "source": [
     "Get the entries of public APIs under the **/entries** endpoint. The result is a response containing the data in JSON format in the body. The header includes the following:\n",
@@ -1815,7 +1823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3cecba7",
+   "id": "cda31950",
    "metadata": {},
    "source": [
     "Extract the content of the request body in a text type or, in this case, in JSON type. "
@@ -9207,7 +9215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3abc5129",
+   "id": "4bb56e96",
    "metadata": {},
    "source": [
     "We converted the content of the request body, which is in **JSON** format, to an R object to easily access the data inside of it. "
@@ -9757,7 +9765,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da284f31",
+   "id": "612c39d9",
    "metadata": {},
    "source": [
     "We created a data frame about the entries of government public APIs from **ap_data** by extracting the **entries** data frame inside the list and then filtering the category."
@@ -9766,7 +9774,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "a05a37f9",
+   "id": "1b4828b7",
    "metadata": {},
    "outputs": [
     {
@@ -9802,7 +9810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1167c27",
+   "id": "8ac30e93",
    "metadata": {},
    "source": [
     "We created a pie chart to inform which entries in the list of government public APIs require an additional step, which is authentication, to access the resource under the endpoint.  "
