--- a/DATA201_Assignment2_R.ipynb
+++ b/DATA201_Assignment2_R.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60dcc6cb",
+   "id": "f38fec78",
    "metadata": {},
    "source": [
     "Make an introduction to the metacritic and ask to scrape their website."
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9461742",
+   "id": "2314eb7d",
    "metadata": {},
    "source": [
     "We take a web page from metacritic and use `read_html()` to read its content. We then save it as **games** to be able to use it throughout the tasks."
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b69d50f1",
+   "id": "92195426",
    "metadata": {},
    "source": [
     "Extracts the game titles from `h3` elements which under the elements with `title` and `clamp-summary-wrap` classes. Save the vector of characters as **titles**. "
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d30b9eef",
+   "id": "5c758b8c",
    "metadata": {},
    "source": [
     "Extracts the links of game titles from `a` elements with `title` class. Save the vector of characters as **link**. "
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca6cb650",
+   "id": "ded6f907",
    "metadata": {},
    "source": [
     "Extracts the gaming platforms from elements with `data` class under the parent elements with `platform` class. Save the vector of characters as **game_platform**. "
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7df826be",
+   "id": "0c9ee102",
    "metadata": {},
    "source": [
     "Extracts the release dates from `span` elements class under the parent elements with `clamp-details` class. Save the vector of characters as **release_date**. "
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfcf0107",
+   "id": "78862af3",
    "metadata": {},
    "source": [
     "Extracts the game descriptions from elements with `summary` class. Save the vector of characters as **description**. "
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d5e68ca",
+   "id": "90c4ac05",
    "metadata": {},
    "source": [
     "Extracts the meta scores from `div` elements which under the `a` elements and elements with `clamp-metascore` class. Converted the values as double and save the vector of doubles as **meta_score**. "
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cffffc48",
+   "id": "eda623ca",
    "metadata": {},
    "source": [
     "Extracts the user scores from `div` elements which under the `a` elements and elements with `clamp-userscore` class. Converted the values as double and then save the vector of doubles as **user_score**. "
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "274efcb3",
+   "id": "8c99e039",
    "metadata": {},
    "source": [
     "Created a data frame containing the links to other web pages and then we replaced the links with their web page content. "
@@ -1568,7 +1568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0a01445",
+   "id": "2f760c2f",
    "metadata": {},
    "source": [
     "We scraped the content of the two web pages by using the getter functions and applying the **cleaning** functions to some data collected that contains special characters and whitespaces."
@@ -1576,7 +1576,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef53308a",
+   "id": "ef001f73",
    "metadata": {},
    "source": [
     "We created relational dataset which is similar to task (b). The **new_video_games** data frame relates to **platforms** data frame through `game_platform`. The **scores** data frame relates to **new_video_games** and **platforms** data frame via `game_title` and `game_platform`."
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7238451",
+   "id": "c98eb2b1",
    "metadata": {},
    "source": [
     "We created a pie chart to see which gaming platform released games and the quantity from last month until the current date."
@@ -1678,7 +1678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "028a86fc",
+   "id": "516452f4",
    "metadata": {},
    "source": [
     "We created a bar plot that compares the critics' and users' scores of the top 5 games in the last 90 days."
@@ -1738,7 +1738,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83e7beab",
+   "id": "77595d20",
    "metadata": {},
    "source": [
     "Combines the base URL with the endpoint to create a full link leading to the resource."
@@ -1776,7 +1776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24217b32",
+   "id": "bc3051f0",
    "metadata": {},
    "source": [
     "Get the entries of public APIs under the **/entries** endpoint. The result is a response containing the data in JSON format in the body. The header includes the following:\n",
@@ -1823,7 +1823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cda31950",
+   "id": "6e0f667c",
    "metadata": {},
    "source": [
     "Extract the content of the request body in a text type or, in this case, in JSON type. "
@@ -9215,7 +9215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bb56e96",
+   "id": "24c03cea",
    "metadata": {},
    "source": [
     "We converted the content of the request body, which is in **JSON** format, to an R object to easily access the data inside of it. "
@@ -9765,7 +9765,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "612c39d9",
+   "id": "4a3977b6",
    "metadata": {},
    "source": [
     "We created a data frame about the entries of government public APIs from **ap_data** by extracting the **entries** data frame inside the list and then filtering the category."
@@ -9774,7 +9774,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "1b4828b7",
+   "id": "f17df4c6",
    "metadata": {},
    "outputs": [
     {
@@ -9804,13 +9804,13 @@
     "    coord_polar(\"y\", start = 0) +\n",
     "    geom_text(aes(label = scales::percent(Counts/sum(Counts))), position = position_stack(vjust = 0.5)) +\n",
     "    scale_fill_discrete(name = \"Authentication Types\", labels = c(\"Authentication not required\", \"apiKey\", \"OAuth\")) +\n",
-    "    ggtitle(\"Percentage of government public APIs requiring authentication\") +\n",
+    "    ggtitle(\"Percentage of Government Public APIs Requiring Authentication\") +\n",
     "    theme_void()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8ac30e93",
+   "id": "ca805f45",
    "metadata": {},
    "source": [
     "We created a pie chart to inform which entries in the list of government public APIs require an additional step, which is authentication, to access the resource under the endpoint.  "
